--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,3 +1,9 @@
+
+
+a, a:hover, a:visited, a:link{
+    text-decoration:none;
+}
+
 /* 数据加载中提示 */
 .dataTables_processing {
     position: absolute;
